--- a/elisp-ghci.cabal
+++ b/elisp-ghci.cabal
@@ -1,8 +1,8 @@
-name: haskelisp
+cabal-version: 3.8
+name: elisp-ghci
 version: 0.1.1.0
-cabal-version: >=1.10
-build-type: Simple
-license: GPL-3
+build-type: Configure
+license: GPL-3.0-only
 license-file: LICENSE
 copyright: 2016 Takenari Shinohara
 maintainer: takenari.shinohara@gmail.com
@@ -12,8 +12,12 @@ description:
     Write Emacs module in Haskell, using Emacs 25's Dynamic Module feature.
 category: Editor, Emacs
 author: Takenari Shinohara
+
+extra-tmp-files:     eval.buildinfo
+
 extra-source-files:
     README.md
+    configure
     cbits/*.c
     cbits/*.h
 
@@ -25,6 +29,7 @@ library
     exposed-modules:
         Emacs
         Emacs.Type
+        Emacs.Init
         Emacs.Internal
         Emacs.Symbol
         Emacs.Core
@@ -33,13 +38,12 @@ library
         Emacs.NAdvice
     build-depends:
         base >=4.7 && <5,
-        protolude <0.2,
-        containers <0.6,
-        mtl <2.3,
-        text <1.3
+        protolude,
+        containers,
+        mtl,
+        text
     c-sources:
         cbits/stab.c
     default-language: Haskell2010
     include-dirs: cbits/
     hs-source-dirs: src
-
