master calling void hint function works

--- a/hamacs.cabal
+++ b/hamacs.cabal
@@ -52,6 +52,7 @@ library
         Emacs.Prelude
         Emacs.Pretty
         Emacs.Symbol
+        Emacs.Text
         Emacs.Type
         Emacs.Validation
     build-depends:
