--- a/hamacs.cabal
+++ b/hamacs.cabal
@@ -42,6 +42,7 @@ library
     exposed-modules:
         Emacs
         Emacs.Api.Lisp.Subr
+        Emacs.Api.Native.Buffer
         Emacs.Api.Native.Package
         Emacs.Api.Native.String
         Emacs.Command
@@ -72,6 +73,7 @@ library
         Emacs.Symbol
         Emacs.Text
         Emacs.Type
+        Emacs.Type.Annotations
         Emacs.Type.CallableInstances
         Emacs.Type.FromEmacsValueInstances
         Emacs.Type.ToEmacsFunctionInstances
