--- a/hamacs.cabal
+++ b/hamacs.cabal
@@ -1,7 +1,7 @@
 cabal-version: 3.8
 name: hamacs
 version: 0.0.1
-build-type: Configure
+build-type: Simple
 license: GPL-3.0-only
 license-file: LICENSE
 copyright: 2025 Daniil Iaitskov
