--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,4 +10,4 @@ jobs:
     - uses: cachix/install-nix-action@v31
       with:
         nix_path: nixpkgs=channel:nixos-unstable
-    - run: nix-build --extra-experimental-features pipe-operators
+    - run: nix-build --extra-experimental-features pipe-operators | cachix push yaitskov
