--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,4 +14,6 @@ jobs:
       with:
         name: yaitskov
         authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
-    - run: nix-build --extra-experimental-features pipe-operators
+    - run: nix-build --extra-experimental-features pipe-operators | cachix push yaitskov
+      env:
+        CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
