--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,11 @@ jobs:
       with:
         name: yaitskov
         authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
-    - run: |
+    - run:
         cachix use yaitskov
+      env:
+        CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
+    - run:
         nix-build --extra-experimental-features pipe-operators | cachix push yaitskov
       env:
         CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
