--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,6 @@ jobs:
     - uses: cachix/cachix-action@v16
       with:
         name: yaitskov
-        authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
     - run:
         cachix use yaitskov
       env:
@@ -22,7 +21,10 @@ jobs:
         nix-build --extra-experimental-features pipe-operators
       env:
         CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
-    - run:
-        cachix push yaitskov ./result
-      env:
-        CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
+    - uses: cachix/cachix-action@v16
+      with:
+        name: yaitskov
+        authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+        pathsToPush: result
+        skipPush: false
+        useDaemon: false
