--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,10 +6,16 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v4.2.2
     - uses: cachix/install-nix-action@v31
       with:
         nix_path: nixpkgs=channel:nixos-unstable
+    - run:
+        echo CACHIX_AUTH_TOKEN=$CACHIX_AUTH_TOKEN
+      env:
+        CACHIX_AUTH_TOKEN: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+    - run:
+        exit 1
     - run:
         nix-build --extra-experimental-features pipe-operators
     - uses: cachix/cachix-action@v15
