--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       with:
         nix_path: nixpkgs=channel:nixos-unstable
     - run:
-        echo CACHIX_AUTH_TOKEN=$CACHIX_AUTH_TOKEN
+        sha1sum <<< $CACHIX_AUTH_TOKEN
       env:
         CACHIX_AUTH_TOKEN: "${{ secrets.CACHIX_AUTH_TOKEN }}"
     - run:
