--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,10 @@ jobs:
       with:
         nix_path: nixpkgs=channel:nixos-unstable
     - run:
-        echo leak $LEAK
+        echo "leak $LEAK env $LEAK2"
+      env:
+        LEAK: "${{ vars.LEAK }}"
+        LEAK2: "${{ env.LEAK }}"
     - run:
         exit 1
     - run:
