--- a/hamacs.cabal
+++ b/hamacs.cabal
@@ -77,6 +77,7 @@ library
         Emacs.Pretty
         Emacs.Symbol
         Emacs.Text
+        Emacs.Test
         Emacs.Type
         Emacs.Type.Annotations
         Emacs.Type.CallableInstances
